--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,19 +1,12 @@
-# This file is a "template" of what your parameters.yml file should look like
-# Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host: 127.0.0.1
-    database_port: ~
-    database_name: symfony
+    database_host: docker_db_1
+    database_port: null
+    database_name: mprod_s34_base
     database_user: root
-    database_password: ~
-    # You should uncomment this if you want to use pdo_sqlite
-    #database_path: '%kernel.project_dir%/var/data/data.sqlite'
-
+    database_password: root
     mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: ~
-    mailer_password: ~
-
-    # A secret key that's used to generate certain security-related tokens
+    mailer_host: correo.gmail
+    mailer_user: base@gmail.com
+    mailer_password: cambiar
     secret: ThisTokenIsNotSoSecretChangeIt
+    app_title: 'Symfony 3.4 Base'
