--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,9 +81,9 @@ fos_user:
         sender_name: "Medra"
     registration:
         form:
-            type: AppBundle\Form\RegistrationFormType
+            type: AppBundle\Form\FOSUserBundle\RegistrationFormType
         confirmation:
             enabled: false
     profile:
         form:
-            type: AppBundle\Form\ProfileFormType
+            type: AppBundle\Form\FOSUserBundle\ProfileFormType
